--- a/helm/templates/gc-rolebinding.yaml
+++ b/helm/templates/gc-rolebinding.yaml
@@ -6,11 +6,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: gc-rolebinding
-  namespace: {{ .Values.OgdcNamespace }}
+  namespace: {{ .Release.Namespace }}
 subjects:
 - kind: ServiceAccount
   name: argo-workflow
-  namespace: {{ .Values.OgdcNamespace }}
+  namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
   name: artifactgc
