initial attempt to do garbage cleanup

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -86,6 +86,9 @@ argo-workflows:
             name: {{ .Release.Name }}-minio-credentials
             key: root-password
           insecure: true
+        podGC:
+          strategy: OnWorkflowSuccess
+
 
   ## @section Executor configuration section
   ##
