--- a/helm/examples/values-dev-cluster-ogdc-example.yaml
+++ b/helm/examples/values-dev-cluster-ogdc-example.yaml
@@ -57,7 +57,7 @@ argo-workflows:
     ## only updates base url of resources on client side,
     ## it's expected that a proxy server rewrites the request URL and gets rid of this prefix
     ## https://github.com/argoproj/argo-workflows/issues/716#issuecomment-433213190
-    baseHref: /
+    baseHref: /ogdc
 
     ## Ingress configuration.
     # ref: https://kubernetes.io/docs/concepts/services-networking/ingress/
@@ -74,9 +74,7 @@ argo-workflows:
       ## For example, for cert-manager TLS using the 'letsencrypt-prod' ClusterIssuer
       ## (which must be created separately), and to specify that the backend protocol
       ## is HTTPS, use the following annotations:
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-prod
-        nginx.ingress.kubernetes.io/backend-protocol: https
+      annotations: { cert-manager.io/cluster-issuer: letsencrypt-prod }
       ## -- Ingress hosts
       ## Add host names (without http(s):// or path) that map to the argo server service.
       ## You may need to add multiple hosts if you have multiple DNS names that map to the
@@ -104,11 +102,6 @@ argo-workflows:
         - hosts:
             - api.test.dataone.org
           secretName: ingress-nginx-tls-cert
-
-    # -- Run the argo server in "secure" mode. Configure this value instead of `--secure` in extraArgs.
-    ## See the following documentation for more details on secure mode:
-    ## https://argo-workflows.readthedocs.io/en/stable/tls/
-    secure: false
 
 
 
