--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -130,35 +130,46 @@ argo-workflows:
     ## Ingress configuration.
     # ref: https://kubernetes.io/docs/concepts/services-networking/ingress/
     ingress:
-      # -- Enable an ingress resource
-      enabled: true
-
-      # -- Additional ingress annotations
-      annotations: { cert-manager.io/cluster-issuer: letsencrypt-prod }
-      # -- Additional ingress labels
-      labels: {}
-      # -- Defines which ingress controller will implement the resource
+      ## -- Enable an ingress resource
+      ## Enable an ingress resource for the Argo server
+      enabled: false
+      # -- Ingress class name
+      ## Your cluster may require this to be set to match your IngressClass resource.
+      ## For nginx ingress controller, use:  ingressClassName: "nginx"
       ingressClassName: "nginx"
-
-      # -- List of ingress hosts
-      ## Hostnames must be provided if Ingress is enabled.
-      ## Secrets must be manually created in the namespace
+      # -- Additional ingress annotations
+      ## Add any additional annotations that your ingress controller may need.
+      ## For example, for cert-manager TLS using the 'letsencrypt-prod' ClusterIssuer
+      ## (which must be created separately), and to specify that the backend protocol
+      ## is HTTPS, use the following annotations:
+      annotations: { 
+        cert-manager.io/cluster-issuer: letsencrypt-prod,
+        nginx.ingress.kubernetes.io/rewrite-target: /$2,
+        nginx.ingress.kubernetes.io/use-regex: "true"
+      }
+      ## -- Ingress hosts
+      ## Add host names (without http(s):// or path) that map to the argo server service.
+      ## You may need to add multiple hosts if you have multiple DNS names that map to the
+      ## same service.
       hosts:
         - api.test.dataone.org
-
-      # -- List of ingress paths
+      ## -- Ingress endpoint paths
+      ## If you are using a path other than '/', make sure to also set
+      ## server.baseHref to match!
       paths:
-        - backend:
-            service:
-              name: "{{ .Release.Name }}-argo-workflows-server"
-              port:
-                number: 2746
-          path: /ogdc
-
-      # -- Ingress path type. One of `Exact`, `Prefix` or `ImplementationSpecific`
-      pathType: Prefix
-
-      # -- Ingress TLS configuration
+        - /ogdc(/|$)(.*)
+      ## -- Path type
+      ## Ref: https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
+      pathType: ImplementationSpecific
+      ## -- Ingress service backend configuration
+      ## This is the port for the argo server service.
+      servicePort: 2746
+      ## -- Ingress TLS configuration
+      ## Add TLS configuration for the Ingress, if desired.
+      ## This example assumes you have created a TLS secret named
+      ## 'ingress-nginx-tls-cert' in the same namespace as the argo server.
+      ## The TLS secret must contain the certificate and private key for the host(s)
+      ## specified above.
       tls:
         - hosts:
             - api.test.dataone.org
