--- a/helm/admin/workflow-pvc.yaml
+++ b/helm/admin/workflow-pvc.yaml
@@ -26,5 +26,5 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: local-path
+  storageClassName: local-storage
   volumeName: ${RELEASE_NAME}-workflow-pv
