--- a/helm/admin/workflow-pv.yaml
+++ b/helm/admin/workflow-pv.yaml
@@ -18,11 +18,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: ${RELEASE_NAME}-workflow-pv
+  name: cephfs-${RELEASE_NAME}-workflow-pv
   labels:
     velero.io/exclude-from-backup: "true"
 spec:
-  storageClassName: local-path
+  storageClassName: local-storage
   capacity:
     storage: 5Gi
   volumeMode: Filesystem
