--- a/helm/admin/workflow-pvc.yaml
+++ b/helm/admin/workflow-pvc.yaml
@@ -16,7 +16,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name:  ${RELEASE_NAME}-workflow-pvc
+  name:  cephfs-${RELEASE_NAME}-workflow-pvc
   labels:
     velero.io/exclude-from-backup: "true"
 spec:
