Update volume name in WF pvc tempalte
Update volume name in WF pvc tempalte
#23

--- a/helm/admin/workflow-pvc.yaml
+++ b/helm/admin/workflow-pvc.yaml
@@ -27,4 +27,4 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: local-storage
-  volumeName: ${RELEASE_NAME}-workflow-pv
+  volumeName: cephfs-${RELEASE_NAME}-workflow-pv
