--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -209,7 +209,7 @@ argo-workflows:
       bucket: argo-workflows
 
       ## -- S3 endpoint
-      endpoint: "${RELEASE_NAME}-minio:9000"
+      endpoint: "{{ .Release.Name }}-minio:9000"
 
       ## Note the `key` attribute is not the actual secret, it's the PATH to
       ## the contents in the associated secret, as defined by the `name` attribute.
