--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: "Set up Helm"
         uses: "azure/setup-helm@v4"
         with:
-          version: "latest"
+          version: "v3.16.2"
 
       - name: "Helm dependency update"
         run: |
