--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.1.0
-commit = True
+commit = False
 tag = False
 message = Bump version: {current_version} → {new_version}
 
@@ -9,5 +9,5 @@ search = version: "{current_version}"
 replace = version: "{new_version}"
 
 [bumpversion:file:CHANGELOG.md]
-search = "^## NEXT_VERSION"
-replace = "## v{new_version} ({now:%Y-%m-%d})"
+search = ## NEXT_VERSION
+replace = ## v{new_version} ({now:%Y-%m-%d})
