Init work to deploy ogdc service
Related work on `ogdc-runner`: https://github.com/QGreenland-Net/ogdc-runner/pull/115

--- a/helm/examples/values-local-cluster-ogdc-example.yaml
+++ b/helm/examples/values-local-cluster-ogdc-example.yaml
@@ -99,3 +99,10 @@ minio:
 
 
   existingSecret: *passwordSecretName
+
+# Ensures that local image of ogdc-service is used.
+# TODO: make deployment tag and this config dependent on env
+image:
+  repository: ogdc-service
+  tag: local
+  pullPolicy: Never
