--- a/helm/examples/values-dev-cluster-ogdc-example.yaml
+++ b/helm/examples/values-dev-cluster-ogdc-example.yaml
@@ -120,3 +120,10 @@ minio:
     existingClaim: "cephfs-${RELEASE_NAME}-minio-pvc"
 
   existingSecret: *passwordSecretName
+
+# Ensures that local image of ogdc-service is used.
+# TODO: make deployment tag and this config dependent on env
+image:
+  repository: ogdc-service
+  tag: latest
+  pullPolicy: Always
