ogdc-service deployment: add namespace metadata

--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ogdc-service-service
+  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     app: ogdc-service
