--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ogdc-service-deployment
+  namespace: {{ .Release.Namespace }}
   labels:
     app: ogdc-service
 spec:
